<resources>
    <string name="app_name">The Artball</string>

    <string name="title_section1">All</string>
    <string name="title_section2">Comps</string>
    <string name="title_section3">Videos</string>
    <string name="title_section4">Other</string>

    <string name="action_articles">Articles</string>
    <string name="action_archive">Archive</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_comments">Comments</string>
    <string name="action_comment">Comment</string>
    <string name="read_article">News</string>
    <string name="action_shop">Shop</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-1713287620055575/7175426848</string>-->
    <string name="title_activity_play_video">PlayVideoActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_full_screen_image">Zoom in</string>
</resources>
